# oferwinnan

./: .env.example  .gitignore  README.md  autonomous.py  data_sync.py  dead_drop.py  device_discovery.py  gut_check.py  jump_cli.py  jump_protocol.py  matrix.service  mirror_blend.py  multipath.py  plan.md  pyproject.toml  rbac.py  requirements.txt  secure_terminate.py  session_jumper.py  symmetric_ratchet.py  task_relay.py  test_autonomous.py  test_data_sync.py  test_dead_drop.py  test_gut_check.py  test_jump.py  test_mirror_blend.py  test_network.py  test_node_manager.py  test_rbac.py  test_secure_terminate.py  test_symmetric_ratchet.py  test_task_relay.py  transport_negotiator.py  transport_ws.py
docs/: CAPABILITIES_AND_LIMITS.md  ORCHESTRATION_ROADMAP.md  THREAT_MODEL.md
scripts/: install-disguise.sh  install-persist.sh
services/: accounts-daemon-helper.service  dbus-timesync-helper.service  systemd-networkd-monitor.service
tests/: conftest.py  test_autonomous.py  test_cli.py  test_config.py  test_data_sync.py  test_dead_drop.py  test_device_discovery.py  test_director.py  test_director_e2e_tools.py  test_disguise.py  test_gut_check.py  test_identity.py  test_jump.py  test_jump_protocol.py  test_llm_backend.py  test_mirror_blend.py  test_multipath.py  test_network.py  test_node_manager.py  test_packaging.py  test_persistence.py  test_rbac.py  test_secure_terminate.py  test_session_jumper.py  test_symmetric_ratchet.py  test_task_relay.py  test_tasking.py  test_traffic_profiles.py  test_transport_dns.py  test_transport_icmp.py  test_transport_refinements.py  (+1 more)
(+25 files in other folders)
